--- a/index.html
+++ b/index.html
@@ -130,74 +130,76 @@
                         
                     </div>
                 </div>
+
                 <div class="sub-projects-rights w-[35%] grid grid-cols-3 space-x-5 gap-y-3">
+
                     <div class="card flex flex-col items-center">
-                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px] rounded-full relative">
-                            <div class="w-[90px] h-[90px] rounded-full border-2 border-black absolute top-3 right-3"></div>
+                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px]  relative">
+                            <div class="w-[90px] h-[90px]  border-2 border-black absolute top-3 right-3"></div>
                             <i class="fa-brands fa-react text-5xl font-bold"></i>
                         </div>
                         <p class="mt-4 text-xl font-medium">React js</p>
                     </div>
 
                     <div class="card flex flex-col items-center">
-                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px] rounded-full relative">
-                            <div class="w-[90px] h-[90px] rounded-full border-2 border-black absolute top-3 right-3"></div>
+                        <div class="t-card-bg flex justify-center items-center bg-white shadow-xl shadow-gray-300 w-[90px] h-[90px]  relative">
+                            <div class="w-[90px] h-[90px]  border-2 border-[#0DB75F] absolute top-3 right-3"></div>
+                            <i class="fa-brands fa-react text-5xl font-bold text-[#0DB75F]"></i>
+                        </div>
+                        <p class="mt-4 text-xl font-medium">React js</p>
+                    </div>
+
+                    <div class="card flex flex-col items-center">
+                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px]  relative">
+                            <div class="w-[90px] h-[90px]  border-2 border-black absolute top-3 right-3"></div>
                             <i class="fa-brands fa-react text-5xl font-bold"></i>
                         </div>
                         <p class="mt-4 text-xl font-medium">React js</p>
                     </div>
 
                     <div class="card flex flex-col items-center">
-                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px] rounded-full relative">
-                            <div class="w-[90px] h-[90px] rounded-full border-2 border-black absolute top-3 right-3"></div>
+                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px]  relative">
+                            <div class="w-[90px] h-[90px]  border-2 border-black absolute top-3 right-3"></div>
                             <i class="fa-brands fa-react text-5xl font-bold"></i>
                         </div>
                         <p class="mt-4 text-xl font-medium">React js</p>
                     </div>
 
                     <div class="card flex flex-col items-center">
-                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px] rounded-full relative">
-                            <div class="w-[90px] h-[90px] rounded-full border-2 border-black absolute top-3 right-3"></div>
+                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px]  relative">
+                            <div class="w-[90px] h-[90px]  border-2 border-black absolute top-3 right-3"></div>
                             <i class="fa-brands fa-react text-5xl font-bold"></i>
                         </div>
                         <p class="mt-4 text-xl font-medium">React js</p>
                     </div>
 
                     <div class="card flex flex-col items-center">
-                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px] rounded-full relative">
-                            <div class="w-[90px] h-[90px] rounded-full border-2 border-black absolute top-3 right-3"></div>
+                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px]  relative">
+                            <div class="w-[90px] h-[90px]  border-2 border-black absolute top-3 right-3"></div>
                             <i class="fa-brands fa-react text-5xl font-bold"></i>
                         </div>
                         <p class="mt-4 text-xl font-medium">React js</p>
                     </div>
 
                     <div class="card flex flex-col items-center">
-                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px] rounded-full relative">
-                            <div class="w-[90px] h-[90px] rounded-full border-2 border-black absolute top-3 right-3"></div>
+                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px]  relative">
+                            <div class="w-[90px] h-[90px]  border-2 border-black absolute top-3 right-3"></div>
                             <i class="fa-brands fa-react text-5xl font-bold"></i>
                         </div>
                         <p class="mt-4 text-xl font-medium">React js</p>
                     </div>
 
                     <div class="card flex flex-col items-center">
-                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px] rounded-full relative">
-                            <div class="w-[90px] h-[90px] rounded-full border-2 border-black absolute top-3 right-3"></div>
+                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px]  relative">
+                            <div class="w-[90px] h-[90px]  border-2 border-black absolute top-3 right-3"></div>
                             <i class="fa-brands fa-react text-5xl font-bold"></i>
                         </div>
                         <p class="mt-4 text-xl font-medium">React js</p>
                     </div>
 
                     <div class="card flex flex-col items-center">
-                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px] rounded-full relative">
-                            <div class="w-[90px] h-[90px] rounded-full border-2 border-black absolute top-3 right-3"></div>
-                            <i class="fa-brands fa-react text-5xl font-bold"></i>
-                        </div>
-                        <p class="mt-4 text-xl font-medium">React js</p>
-                    </div>
-
-                    <div class="card flex flex-col items-center">
-                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px] rounded-full relative">
-                            <div class="w-[90px] h-[90px] rounded-full border-2 border-black absolute top-3 right-3"></div>
+                        <div class="t-card-bg flex justify-center items-center bg-[#0DB75F] w-[90px] h-[90px]  relative">
+                            <div class="w-[90px] h-[90px]  border-2 border-black absolute top-3 right-3"></div>
                             <i class="fa-brands fa-react text-5xl font-bold"></i>
                         </div>
                         <p class="mt-4 text-xl font-medium">React js</p>
