--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </head>
 
-<body>
+<body class="">
     <!-- Navbar -->
     <div class="navbar bg-white shadow-gray-300 shadow sticky top-0 z-10">
         <div class="sub-navbar flex w-[90vw] md:w-[80vw] mx-auto justify-between h-[10vh] md:h-[12vh] items-center">
@@ -148,7 +148,7 @@
 
         <div class="mt-20 slider-tech bottom w-[88vw] mx-auto">
 
-            <div class="card shadow-lg rounded-lg ">
+            <div class="card shadow-lg rounded-lg">
                 <div class="img flex justify-center">
                     <i class="fa-brands fa-react text-6xl font-bold text-[#2BB673]"></i>
                 </div>
@@ -362,13 +362,13 @@
         <div class="btm slider w-[90vw] md:w-[80vw] mx-auto  my-8">
 
             <div
-                class="card cursor-pointer w-[100%] md:w-[26vw] hover:bg-[#0DB75F] bg-[#000] h-[55vh] md:h-[59vh] rounded-lg  mr-5">
+                class="card cursor-pointer w-[100%] md:w-[26vw] bg-white shadow-gray-300 shadow-2xl my-5 h-[60vh] md:h-[59vh] rounded-lg  mr-5">
                 <div class="w-[93%] mx-auto">
                     <img class="pt-4 pb-3 rounded-xl"
                         src="https://themedismportfolio.netlify.app/static/media/tuitional.33f58cf720567662157b.png"
                         alt="">
                 </div>
-                <div class="desc text-white">
+                <div class="desc">
                     <h1 class="text-xl font-bold mb-2 px-4">Tuitional Education</h1>
                     <p class="px-5 leading-6 text-sm">This is a project made to learn the latest languages by building
                         an app.</p>
@@ -384,13 +384,13 @@
             </div>
 
             <div
-                class="card cursor-pointer w-[100%] md:w-[26vw] hover:bg-[#0DB75F] bg-[#000] h-[55vh] md:h-[59vh] rounded-lg  mr-5">
+                class="card cursor-pointer w-[100%] md:w-[26vw] bg-white shadow-gray-300 shadow-2xl my-5 h-[55vh] md:h-[59vh] rounded-lg  mr-5">
                 <div class="w-[93%] mx-auto">
                     <img class="pt-4 pb-3 rounded-xl"
                         src="https://themedismportfolio.netlify.app/static/media/tuitional.33f58cf720567662157b.png"
                         alt="">
                 </div>
-                <div class="desc text-white">
+                <div class="desc">
                     <h1 class="text-xl font-bold mb-2 px-4">Tuitional Education</h1>
                     <p class="px-5 leading-6 text-sm">This is a project made to learn the latest languages by building
                         an app.</p>
@@ -406,13 +406,13 @@
             </div>
 
             <div
-                class="card cursor-pointer w-[100%] md:w-[26vw] hover:bg-[#0DB75F] bg-[#000] h-[55vh] md:h-[59vh] rounded-lg  mr-5">
+                class="card cursor-pointer w-[100%] md:w-[26vw] bg-white shadow-gray-300 shadow-2xl my-5 h-[55vh] md:h-[59vh] rounded-lg  mr-5">
                 <div class="w-[93%] mx-auto">
                     <img class="pt-4 pb-3 rounded-xl"
                         src="https://themedismportfolio.netlify.app/static/media/tuitional.33f58cf720567662157b.png"
                         alt="">
                 </div>
-                <div class="desc text-white">
+                <div class="desc">
                     <h1 class="text-xl font-bold mb-2 px-4">Tuitional Education</h1>
                     <p class="px-5 leading-6 text-sm">This is a project made to learn the latest languages by building
                         an app.</p>
@@ -428,13 +428,13 @@
             </div>
 
             <div
-                class="card cursor-pointer w-[100%] md:w-[26vw] hover:bg-[#0DB75F] bg-[#000] h-[55vh] md:h-[59vh] rounded-lg  mr-5">
+                class="card cursor-pointer w-[100%] md:w-[26vw] bg-white shadow-gray-300 shadow-2xl my-5 h-[55vh] md:h-[59vh] rounded-lg  mr-5">
                 <div class="w-[93%] mx-auto">
                     <img class="pt-4 pb-3 rounded-xl"
                         src="https://themedismportfolio.netlify.app/static/media/tuitional.33f58cf720567662157b.png"
                         alt="">
                 </div>
-                <div class="desc text-white">
+                <div class="desc">
                     <h1 class="text-xl font-bold mb-2 px-4">Tuitional Education</h1>
                     <p class="px-5 leading-6 text-sm">This is a project made to learn the latest languages by building
                         an app.</p>
@@ -454,12 +454,12 @@
     </div>
 
     <!-- Footer -->
-     <div class="footer bg-white shadow-2xl shadow-gray-400  mt-20">
-        <div class="sub footer w-[80vw] mx-auto flex justify-between h-[30vh] items-center">
+     <div class="footer bg-white shadow-2xl shadow-gray-400  mt-20 py-6 md:py-0">
+        <div class="sub footer w-[80vw] mx-auto flex md:flex-row flex-col justify-between h-[30vh] items-center">
 
             <div class="footer-left">
                 <h1 class="text-4xl font-semibold text-center">Contact</h1>
-                <p class="font-light pt-2">Feel free to reach out!</p>
+                <p class="pt-2 text-center">Feel free to reach out!</p>
             </div>
 
             <div class="footer-right space-y-5">
