--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             class="bg-[#0DB75F] text-white px-3 py-0 rounded-md mr-2">m</span>Portfolio</h1>
                 </a>
             </div>
-            <ul class="nav-items hidden md:flex space-x-5 cursor-pointer text-xl font-medium">
+            <ul class="nav-items hidden md:flex space-x-8 cursor-pointer text-xl font-medium">
                 <a href="#about">
                     <li>About</li>
                 </a>
@@ -78,7 +78,7 @@
                 <a href="#projects">
                     <li>Projects</li>
                 </a>
-                <a href="#contect">
+                <a href="#contact">
                     <li>Contacts</li>
                 </a>
             </ul>
@@ -120,9 +120,7 @@
                             Mudassir</span></h1>
                     <h1 class="text-3xl md:text-6xl font-bold mb-2 text-center"><span
                             class="text-[#0DB75F] myfont">Web</span> Developer</h1>
-                    <p class="my-5 text-lg text-center md:text-left">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Perferendis fugiat
-                        sint nemo molestias deleniti quas, quia recusandae autem veritatis quaerat quibusdam odio eius
+                    <p class="my-5 text-xl text-center md:text-left">I’m a full-stack developer with 3 years of experience using React and NodeJS. Reach out if you’d like to learn more!
                     </p>
                     <button class="bg-[#0DB75F] font-medium text-white px-5 py-2 rounded-lg ">Contact Me</button>
                 </div>
@@ -454,7 +452,7 @@
     </div>
 
     <!-- Footer -->
-     <div class="footer bg-white shadow-2xl shadow-gray-400  mt-20 py-6 md:py-0">
+     <div id="contact" class="footer bg-white shadow-2xl shadow-gray-400  mt-20 py-6 md:py-0">
         <div class="sub footer w-[80vw] mx-auto flex md:flex-row flex-col justify-between h-[30vh] items-center">
 
             <div class="footer-left">
